--- a/Css/Madhj.css
+++ b/Css/Madhj.css
@@ -9,8 +9,9 @@
     --quality-color: #f44036;
     --time-color: #009688;
     --passion-color: #03a9f4;
-    --section-padding: 100px;
     --paragraph-color: #666;
+    --footer-color: #b9b9b9;
+    --section-padding: 100px;
     --line-height: 1.7;
     --main-duration: 0.3s;
 }
@@ -98,6 +99,18 @@
     }
 }
 
+@keyframes change-background {
+
+    0%,
+    100% {
+        background-image: url("../images/discount-background1.jpg");
+    }
+
+    50% {
+        background-image: url("../images/discount-background2.jpg");
+    }
+}
+
 /* todo End Animation */
 
 /*  ?Start Components */
@@ -157,6 +170,39 @@
     padding-bottom: var(--section-padding);
 }
 
+.spikes {
+    position: relative;
+}
+.spikes::before {
+    content: "";
+    position: absolute;
+    right:0;
+    width: 100%;
+    height: 30px;
+    background-image: linear-gradient(135deg, var(--background-color) 25%, transparent 25%),linear-gradient(225deg,var(--background-color) 25%, transparent 25%);
+    background-size: 30px 30px;
+    z-index: 1;
+}
+.dots {
+    background-image: url("../images/dots.png");
+    background-repeat: no-repeat;
+    height: 186px;
+    width: 204px;
+    position: absolute;
+}
+.dots-up {
+    top:200px;
+    right: 0;
+}
+.dots-down {
+    bottom: 200px;
+    left: 0;
+}
+@media (max-width: 1200px) {
+    .events .dots {
+        display: none;
+    }
+}
 /* ?End Components */
 
 /* Start Global Rules  */
@@ -1426,7 +1472,6 @@ header .mega-menu .links i {
     .pricing .box.popular {
         top: -20px
     }
-
 }
 
 .pricing .box.popular .label {
@@ -1500,7 +1545,6 @@ header .mega-menu .links i {
     font-weight: 900;
     margin-right: 10px;
     color: var(--main-color);
-
 }
 
 .pricing .box a {
@@ -1522,9 +1566,7 @@ header .mega-menu .links i {
 
 }
 
-
 /* End Section Pricing   */
-
 
 /* Start Section Videos   */
 
@@ -1532,8 +1574,6 @@ header .mega-menu .links i {
     position: relative;
     background-color: var(--background-color);
 }
-
-.videos .container {}
 
 .videos .holder {
     display: flex;
@@ -1627,6 +1667,7 @@ header .mega-menu .links i {
     width: fit-content;
     margin: 0 auto 50px;
     position: relative;
+    text-align: center;
 }
 
 .stats .container {
@@ -1691,6 +1732,117 @@ header .mega-menu .links i {
 /* End Section Stats   */
 
 
+/* Start Section Discount   */
+.discount {
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.discount .image {
+    background-image: url("../images/discount-background1.jpg");
+    background-size: cover;
+    color: white;
+    flex-basis: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+    animation: change-background 10s linear infinite;
+}
+
+.discount .image::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(23 135 224 / 97%);
+    z-index: -1;
+}
+
+@media (max-width: 991px) {
+    .discount .image {
+        flex-basis: 100%;
+    }
+}
+
+.discount .form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-basis: 50%;
+    padding-bottom: 50px;
+}
+
+@media (max-width: 991px) {
+    .discount .form {
+        flex-basis: 100%;
+    }
+}
+
+.discount .form .input {
+    display: block;
+    width: 100%;
+    margin-bottom: 25px;
+    padding: 15px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    background-color: #f9f9f9;
+    caret-color: var(--main-color);
+}
+
+.discount .form textarea.input {
+    resize: none;
+    height: 200px;
+}
+
+.discount .form [type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    background-color: var(--main-color);
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+
+.discount .form [type="submit"]:hover {
+    background-color: var(--main-color-alt);
+}
+
+.discount .content {
+    text-align: center;
+    padding: 0 20px;
+}
+
+.discount .content h2 {
+    font-size: 40px;
+    letter-spacing: -2px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.discount .content p {
+    line-height: 1.6;
+    font-size: 18px;
+    max-width: 500px;
+    text-transform: none;
+}
+
+.discount .content img {
+    width: 300px;
+    max-width: 100%;
+}
+
+/* End Section Discount   */
+
+
 /*      start up        */
 .up {
     position: sticky;
@@ -1734,54 +1886,151 @@ header .mega-menu .links i {
 /* Start footer */
 
 footer {
-    padding-top: calc(var(--section-padding)/2);
-    padding-bottom: calc(var(--section-padding)/2);
-    background-image: url("../images/subscribe.jpg");
-    background-size: cover;
-    position: relative;
-    color: var(--secondary-color);
-    text-align: center;
+    background-color: #191919;
+    padding: 70px 0 0;
 }
 
-footer::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0 0 0 / 70%);
+@media (max-width: 767px) {
+    footer {
+        text-align: center;
+    }
 }
 
 footer .container {
-    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
+}
+
+footer .box h3 {
+    font-size: 50px;
+    color: var(--background-color);
+    margin: 0 0 20px;
 
 }
 
-footer img {
-    margin-bottom: 20px;
+footer .box .social {
+    display: flex;
 }
 
-footer p:not(.copyright) {
-    text-transform: uppercase;
-    padding: 20px;
-    border-bottom: 1px solid var(--secondary-color);
-    font-size: 22px;
-    width: fit-content;
-    margin: 20px auto;
+@media (max-width: 767px) {
+    footer .box .social {
+        justify-content: center;
+    }
 }
 
-footer .social-icons i {
-    padding: 10px 15px;
+footer .box .social li {
+    margin-right: 10px;
+}
+
+footer .box .social li a {
+    background-color: #313131;
+    color: var(--footer-color);
+    display: inline-flex;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    transition: var(--main-duration);
+}
+
+footer .box .social .facebook:hover {
+    background-color: #1877f2;
+}
+
+footer .box .social .twitter:hover {
+    background-color: #1da1f2;
+}
+
+footer .box .social .youtube:hover {
+    background-color: #ff0000;
+}
+
+footer .box .text {
+    line-height: 2;
+    color: var(--footer-color);
+    margin-top: 10px;
+}
+
+footer .box .links li {
+    border-bottom: 1px solid #444;
+    padding: 15px 0;
+    transition: var(--main-duration);
+}
+
+footer .box .links li:last-child {
+    border: none;
+}
+
+footer .links li:hover {
+    padding-left: 10px;
+}
+
+footer .links li:hover a {
+    color: white;
+}
+
+footer .links li a {
+    color: var(--footer-color);
+    transition: var(--main-duration);
+}
+
+footer .links li a::before {
+    font-family: "Font Awesome 5 Free";
+    content: "\f101";
+    font-weight: 900;
+    margin-right: 10px;
+    color: var(--main-color);
+}
+
+footer .box .line {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    color: var(--footer-color);
+}
+
+@media (max-width: 767px) {
+    footer .box .line {
+        flex-direction: column;
+    }
+}
+
+footer .box .line i {
+    color: var(--main-color);
+    font-size: 25px;
+    margin-right: 10px;
+}
+
+@media (max-width: 767px) {
+    footer .box .line i {
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+}
+
+footer .box .line .info {
+    line-height: var(--line-height);
+    flex: 1;
+}
+
+footer .line .info span {
+    display: block;
+}
+
+footer .footer-gallery img {
+    width: 78px;
+    border: 3px solid white;
+    margin: 2px;
 }
 
 footer .copyright {
-    margin-top: 60px;
-}
-
-footer span {
-    font-weight: bold;
-    color: var(--main-color)
+    margin: 50px 0 0;
+    padding: 25px 0;
+    text-align: center;
+    color: white;
+    border-top: 1px solid #444;
 }
 
 /* End footer */
